# PMW3360-Firmware

./: LICENSE  README.md
examples/EXP430FR5994/: main.c
examples/Pico-RP2040/: CMakeLists.txt  main.c
src/: PMW3360.c  PMW3360.h  PMW3360_firmware.h  PMW3360_port.h
